fixed images coming out of the box

--- a/app/assets/stylesheets/crops.css.scss
+++ b/app/assets/stylesheets/crops.css.scss
@@ -6,12 +6,12 @@
 }
 
 .boxc {
-  margin: 15px;
+  margin: 5px;
   width: 150px;
-  height: 150px;
+  height: 185px;
 }
 
 .boxc img {
-  width: 150px;
-  height: 120px;
+  width: 100%;
+  height: 148px;
 }
