--- a/app/assets/stylesheets/languages.css.scss
+++ b/app/assets/stylesheets/languages.css.scss
@@ -6,13 +6,14 @@
 }
 
 .boxl {
-  margin: 15px;
+  margin: 5px;
   width: 150px;
+  height: 185px;
 }
 
 .boxl img {
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 148px;
 }
 .title {
   color: white;
