--- a/app/assets/stylesheets/symptoms.css.scss
+++ b/app/assets/stylesheets/symptoms.css.scss
@@ -6,14 +6,14 @@
 }
 
 .boxs {
-  margin: 15px;
+  margin: 5px;
   width: 150px;
-  height: 150px;
+  height: 185px;
 }
 
 .boxs img {
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 148px;
 }
 .sh {
   background-color: white;
